--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-    <meta name="theme-color" content="#0D1117" />
-    <link
-      rel="shortcut icon"
-      type="image/ico"
-      href="/src/assets/favicon.ico"
-    />
-    <title>pota App</title>
-  </head>
-  <body>
-    <noscript>The app requires JavaScript to be enabled</noscript>
-    <script src="/src/index.jsx" type="module"></script>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+		/>
+		<meta name="theme-color" content="#0D1117" />
+		<link
+			rel="shortcut icon"
+			type="image/ico"
+			href="/src/assets/favicon.ico"
+		/>
+		<title>AoTTG Name Colorizer</title>
+	</head>
+	<body>
+		<noscript>The app requires JavaScript to be enabled</noscript>
+		<script src="/src/index.jsx" type="module"></script>
+	</body>
 </html>
