--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link
 			rel="shortcut icon"
 			type="image/ico"
-			href="/src/assets/favicon.ico"
+			href="/src/assets/favicon.svg"
 		/>
 		<title>AoTTG Name Colorizer</title>
 	</head>
