add social metadata

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
 			type="image/ico"
 			href="/src/assets/favicon.svg"
 		/>
-		<title>AoTTG Name Colorizer</title>
+
+		<!-- title/description -->
+		<title title="AoTTG Name Colorizer">AoTTG Name Colorizer</title>
+		<meta
+			name="description"
+			content="A web tool to make AoTTG-2 (user|clan|room) name colorization easy."
+		/>
+		<meta name="subject" content="AoTTG Web Tool" />
+
+		<!-- schema -->
+		<meta itemprop="name" content="AoTTG Name Colorizer" />
+		<meta
+			itemprop="description"
+			content="A web tool to make AoTTG-2 (user|clan|room) name colorization easy."
+		/>
+		<meta itemprop="image" content="/src/assets/favicon.svg" />
+
+		<!-- facebook -->
+		<meta property="og:url" content="https://aottg-ng.ehmeh.com" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="AoTTG Name Colorizer" />
+		<meta property="og:site_name " content="AoTTG Name Colorizer" />
+		<meta
+			property="og:description"
+			content="A web tool to make AoTTG-2 (user|clan|room) name colorization easy."
+		/>
+		<meta property="og:image" content="/src/assets/social.jpg" />
+
+		<!-- twitter -->
+		<meta name="twitter:title" content="AoTTG Name Colorizer" />
+		<meta name="twitter:site" content="asciivideo" />
+		<meta name="twitter:image" content="/src/assets/social.jpg" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:description"
+			content="A web tool to make AoTTG-2 (user|clan|room) name colorization easy."
+		/>
 	</head>
 	<body>
 		<noscript>The app requires JavaScript to be enabled</noscript>
